2008-02-22  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #514836

	* addressbook/e-book-backend-gal.c: (member_populate):
	Obsoleting EVC_X_DEST_EMAIL and EVC_X_DEST_NAME and one leak fix.

2008-02-18  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #515744

	* camel/camel-exchange-summary.c: (exchange_summary_class_init),
	(message_info_free): Free our message info members properly.

2008-02-16  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #516248

	* calendar/e-cal-backend-exchange.c: (open_calendar): Hier wont be
	available if we are offline. Same as bug #516252

2008-02-16  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #516250

	* addressbook/e-book-backend-gal.c: (build_contact_from_entry): Allow
	it to reauth if we are connecting after a offline.

2008-02-16  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #516252

	* addressbook/e-book-backend-exchange.c:
	(e_book_backend_exchange_connect): Determine that we are in offline if
	we cant get info from the server.

2008-02-13  Srinivasa Ragavan  <sragavan@novell.com>

	* configure.in: Version bump for 2.21.92

2008-02-11  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.21.91 release.

2008-02-12  Matthew Barnes  <mbarnes@redhat.com>

	* camel/camel-exchange-summary.c:
	* addressbook/e-book-backend-gal.c:
	Replace G_GNUC_PRETTY_FUNCTION (deprecated) with G_STRFUNC.

2008-02-07  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #420503

	* mail/mail-stub-exchange.c: (process_flags):
	Use copies of URLs, because we unlock owner so it can be freed.

	** Patch from Srinivasa Ragavan and Bharath Acharya:
	* mail/mail-stub-exchange.c: (message_remove_at_index),
	(change_message):
	Better locks using; the changed_messages array should be unique.

2008-02-06  Sankar P  <psankar@novell.com>

	* camel/camel-exchange-store.c: (construct):
	Do not show two junk folders for exchange. 
	Exchange has Actual Junk and not VJunk.
